@@ -1566,3 +1566,4 @@
 ( cvs diff -u -r 1.1.4.39 -r 1.1.4.40 src/etpan/imap-thread.c;  ) > 2.2.3cvs3.patchset
 ( cvs diff -u -r 1.8.2.10 -r 1.8.2.11 README;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 manual/ack.xml;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/gtk/authors.h;  ) > 2.2.3cvs4.patchset
 ( cvs diff -u -r 1.100.2.38 -r 1.100.2.39 AUTHORS;  cvs diff -u -r 1.1.2.20 -r 1.1.2.21 src/gtk/authors.h;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 tools/claws.i18n.status.pl;  ) > 2.2.3cvs5.patchset
+( cvs diff -u -r 1.382.2.275 -r 1.382.2.276 src/compose.c;  cvs diff -u -r 1.213.2.96 -r 1.213.2.97 src/folder.c;  cvs diff -u -r 1.207.2.101 -r 1.207.2.102 src/folderview.c;  cvs diff -u -r 1.83.2.70 -r 1.83.2.71 src/mimeview.c;  cvs diff -u -r 1.395.2.216 -r 1.395.2.217 src/summaryview.c;  ) > 2.2.3cvs6.patchset
